<resources>
    <string name="app_name">Teste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">orlandroyd@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_my_products">My Products</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_config">Config</string>
    <string name="menu_logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_my_password">I forgot my password</string>
    <string name="login">Login</string>
    <string name="invalid_username">Required</string>
    <string name="invalid_password">Required</string>
    <string name="error">Error</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="map">Map</string>
    <string name="details">Details</string>
    <string name="buy">Buy</string>
    <string name="confirm">Confirm</string>
    <string name="dialog_msg">Do you want this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>