<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_my_products"
        android:name="com.gmail.orlandroyd.testepratico.presentation.my_products.MyProductsFragment"
        android:label="@string/menu_my_products"
        tools:layout="@layout/fragment_my_products">
        <action
            android:id="@+id/action_nav_my_products_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.gmail.orlandroyd.testepratico.presentation.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_config"
        android:name="com.gmail.orlandroyd.testepratico.presentation.config.ConfigFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_config" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.gmail.orlandroyd.testepratico.presentation.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_my_products"
            app:destination="@id/nav_my_products"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_detail"
        android:name="com.gmail.orlandroyd.testepratico.presentation.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="product"
            app:argType="com.gmail.orlandroyd.testepratico.domain.model.Product" />
    </fragment>

</navigation>